src/test/StaticFail3/StaticFail3.expected
error: StaticFail3.panda:5:1: static class 'NoSubclassing' cannot be subclassed
1 error
