src/test/StaticFail3/StaticFail3.panda
@static
class NoSubclassing {
}

class Test : NoSubclassing {
}